errores.txt
yeremi@yeremi-VirtualBox:~/pr03cpp$ g++ -o Splay Splay.cpp
Splay.cpp: In member function ‘void Splay::insert(char*)’:
Splay.cpp:135:45: error: cannot convert ‘Node*’ to ‘Node**’
  135 |             root->getChildsList()->insertar(leafNode);
      |                                             ^~~~~~~~
      |                                             |
      |                                             Node*
In file included from Node.cpp:3,
                 from Splay.cpp:4:
list.cpp:32:27: note:   initializing argument 1 of ‘void list<T>::insertar(T*) [with T = Node*]’
   32 | void list<T>::insertar(T* pData) {
      |                        ~~~^~~~~
Splay.cpp:138:33: error: cannot convert ‘Node*’ to ‘Node**’
  138 |             childList->insertar(newNode);
      |                                 ^~~~~~~
      |                                 |
      |                                 Node*
list.cpp:32:27: note:   initializing argument 1 of ‘void list<T>::insertar(T*) [with T = Node*]’
   32 | void list<T>::insertar(T* pData) {
      |                        ~~~^~~~~
Splay.cpp: In member function ‘Node* Splay::zigzag(Node*)’:
Splay.cpp:60:1: warning: control reaches end of non-void function [-Wreturn-type]
   60 | }
      | ^
Splay.cpp: In member function ‘Node* Splay::zagzig(Node*)’:
Splay.cpp:75:1: warning: control reaches end of non-void function [-Wreturn-type]
   75 | }
      | ^
yeremi@yeremi-VirtualBox:~/pr03cpp$ gedit Splay.cpp
yeremi@yeremi-VirtualBox:~/pr03cpp$ g++ -o Splay Splay.cpp
Splay.cpp: In member function ‘Node* Splay::zigzag(Node*)’:
Splay.cpp:60:1: warning: control reaches end of non-void function [-Wreturn-type]
   60 | }
      | ^
Splay.cpp: In member function ‘Node* Splay::zagzig(Node*)’:
Splay.cpp:75:1: warning: control reaches end of non-void function [-Wreturn-type]
   75 | }
      | ^
/usr/bin/ld: /usr/lib/gcc/x86_64-linux-gnu/13/../../../x86_64-linux-gnu/Scrt1.o: en la función `_start':
(.text+0x1b): undefined reference to `main'
collect2: error: ld returned 1 exit status
